<resources>
    <string name="app_name">Universal Mobile</string>
    <string name="userID">Test</string>
    <string name="pin_kod">PIN-KODNI KIRITING</string>
    <string name="phone_number">Telefon nomerni kiriting</string>
    <string name="password_number">Parolni kiriting</string>
    <string name="kirish">Kirish</string>
    <string name="verify_status1">Tasdiqlash kodi &#160;</string>
    <string name="verify_status">&#160;ichida sizga jo`natiladi iltimos kuting</string>
    <string name="verify">Tasdiqlash kodi</string>
    <string name="logo">Logotip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bu yerda Universal bank haqida</string>
    <string name="title_activity_offline">Universal Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Universal Bank</string>
    <string name="nav_header_subtitle">Universalbank.uz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройка</string>
    <string name="title_activity_settings">Настройка</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Muzaffar</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="prompt_card_number">Karta raqamini kiriting</string>
    <string name="prompt_card_name">Karta nomini kiriting</string>
    <string name="prompt_expire_date">oy/yil</string>
    <string name="prompt_sms_pass">Parol</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Registratsiya</string>
    <string name="action_sign_in_short">Sign in, short</string>
    <string name="error_field_required">Majburiy maydon</string>
    <string name="title_activity_user_profile_online">UserProfileOnline</string>

    <!-- TODO: Credit card strings for open  -->
    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>
</resources>
