<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".register.fragment.CardRegister">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:src="@drawable/ic_credit_card_black_24dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/umumiy_padding"
                android:hint="@string/prompt_card_number"
                android:inputType="numberDecimal"
                android:lineSpacingMultiplier="4"
                android:maxLength="16"
                android:maxLines="1"
                android:singleLine="true"
                android:textIsSelectable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/expire_date"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/umumiy_padding"
                android:layout_marginRight="@dimen/umumiy_padding"
                android:gravity="right"
                android:hint="@string/prompt_expire_date"
                android:inputType="date"
                android:maxLength="4"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>