<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/form_container"
    tools:context="com.example.dellgaming.myapplication.register.fragment.FormRegister">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo1"
            android:layout_alignEnd="@+id/phone_number"
            android:layout_alignStart="@+id/phone_number" />



        <TextView
    android:id="@+id/phone_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/phone_number"
    android:textAppearance="@style/TextAppearance.AppCompat"
    android:textColor="@color/white"
    android:layout_below="@+id/imageView"
    android:layout_alignStart="@+id/phone"
    android:layout_alignEnd="@+id/phone" />
    <EditText
    android:id="@+id/phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:background="@drawable/kod"
    android:gravity="center"
    android:inputType="phone"
    android:layout_below="@+id/phone_number"
    android:layout_centerHorizontal="true" />

    <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password_number"
    android:textColor="@color/white"
    android:layout_below="@+id/phone"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="23dp" />

    <EditText
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:inputType="numberPassword"
    android:layout_below="@+id/textView4"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="23dp"
    android:background="@drawable/kod"

        />

    <Button
    android:id="@+id/kirish"
    android:layout_width="wrap_content"
    android:layout_height="80px"
    android:layout_alignEnd="@+id/password"
    android:layout_alignStart="@+id/password"
    android:layout_below="@+id/password"
    android:layout_marginTop="23dp"
    android:background="@drawable/kirish"
    android:elevation="0dp"
    android:visibility="visible"
    android:text="@string/kirish"
        />

        <TextView
        android:id="@+id/sms_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tasdiqlash kodini kiriting"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_above="@+id/sms_code"
        android:visibility="invisible"
        android:textColor="@color/white"
            />

        <EditText
        android:id="@+id/sms_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:inputType="number"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@drawable/kod"
        android:layout_below="@+id/kirish"
        android:layout_alignStart="@+id/kirish" />

        <Button
            android:id="@+id/sms_check"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_alignEnd="@+id/sms_code"

            android:layout_alignStart="@+id/sms_code"
            android:layout_below="@+id/sms_code"
            android:layout_marginTop="18dp"
            android:background="@drawable/kirish"

            android:elevation="0dp"
            android:text="@string/kirish"
            android:visibility="invisible" />


</RelativeLayout>
    </ScrollView>

</FrameLayout>
